# srikanthnaidu1234-Artifical_Intelligence_Video_Search

./: .gitattributes  pyproject.toml
video_search/: Dockerfile  autoencoder_model.pth  docker-compose.yml  pyproject.toml
video_search/download/: wbWRWeVe1XE_captions.txt
video_search/processed_video_frames/: frames.npy
video_search/src/: detecting_objects.py  embedding_model  embedding_model.py  postgreSQL_db.py  select * from detections;.pgsql  video_detector.py  video_indexing_pipeline.py
